# discord-static-bot

./: .gitignore  README.md  bot.py  flake.nix  fly.toml  old_bot.py  pyproject.toml
discord_static_bot/: bot.py  checks.py  config.py  main.py
test/: test_config.py
